recursion.lessons.recursion.koch.Koch.scala.error
Koch:19: error: expected start of definition
	override def run() {
                 ^Koch:22: error: Unmatched closing brace '}' ignored here
}
^